<resources>
    <string name="app_name">My Application</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Full Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="contact">Contact No.</string>
    <string name="hod">HOD</string>
    <string name="teacher">Teacher</string>
    <string name="roleType">Select Role Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Select Gender</string>
    <string name="signUp">Register</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
